todoapp/base/deployment-backend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: todo-backend
          readinessProbe:
            httpGet:
              path: /readiness
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /liveness
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 15 
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
