todoapp/base/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todoapp-svc
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
    - port: 80
      protocol: TCP
      targetPort: 4000
