todoapp/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 4000
